
 + Deprecate function icat.exception.stripCause()

   This was an internal helper function not really meant to be part
   of the API.  The functionality has been moved in a base class of
   the exception hierarchy.

** Bug fixes and minor changes

 + IDSClient: add the version API call introduced in ids.server 1.8.0.

 + Issue #41: Incomprehensible error messages with Python 3.

 + Minor changes in the error handling.  Add new exception EntityTypeError.

* Version 0.13.1 (2017-07-12)

** Bug fixes and minor changes

 + Issue #38: There should be a way to access the kwargs used to
   create the client in config.

* Version 0.13.0 (2017-06-09)

** New features

 + Issue #11: Support discovery of info about available ICAT
   authenticators.

   If supported by the ICAT server (icat.server 4.9.0 and newer), the
   icat.config module queries the server for information on available
   authenticators and the credential keys they require for login.  The
   configuration variables for these keys are then adapted
   accordingly.  Note incompatible changes below.

 + Review wipeicat.py.  This was an example script, but is now
   promoted to be a regular utility script that gets installed.

 + Issue #32: Add support for using aggregate functions in class
   Query.

 + Issue #30: Add a predefined config variable type cfgpath.

 + Issue #31: Add a flag to add the default variables to the Config
   constructor (default: True).

 + XMLDumpFileReader also accepts a XML tree object as input.

 + Verify support for ICAT 4.9.0.
   Add new ICAT API method getVersion().

** Incompatible changes and deprecations

 + As a consequence of the discovery of available authenticators, the
   workflow during configuration need to be changed.  Until now, the
   beginning of a typical python-icat program would look like:

         config = icat.config.Config()
         # Optionally, add custom configuration variables:
         # config.add_variable(...)
         conf = config.getconfig()