@@ -21,6 +21,8 @@
 
  + Issue #41: Incomprehensible error messages with Python 3.
 
+ + Issue #43: Client.logout() should silently ignore ICATSessionError.
+
  + Minor changes in the error handling.  Add new exception EntityTypeError.
 
 * Version 0.13.1 (2017-07-12)
